--- a/project.html
+++ b/project.html
@@ -4,6 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
   <title>CSE 121b | Project</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +27,7 @@
   </nav>
   <main id="gridly">
     <h1>Project</h1>
-    <h2>Search Makeup Products</h2>
+    <h2>Search Maybelline Makeup Products</h2>
 
     <select id="filtered" title="Choose a data filter.">
       <option value="" disabled selected>Filter Makeup</option>
@@ -36,8 +37,10 @@
       <option value="eyeshadow">Eyeshadow</option>
       <option value="eyeliner">Eyeliner</option>
       <option value="lipstick">Lipstick</option>
-      <option value="lip liner">Lip liner</option>
-      <option value="cheapest">Low price</option>
+      <option value="lip_liner">Lip liner</option>
+      <option value="nail_polish">Nail polish</option>
+      <option value="low_price">Low price</option>
+      <option value="high_price">High price</option>
       <option value="all">No Filter</option>
     </select>
 
